--- a/tmux.conf
+++ b/tmux.conf
@@ -1,104 +1,138 @@
-# Setting the prefix from `C-b` to `C-a`.
-# By remapping the `CapsLock` key to `Ctrl`,
-# you can make triggering commands more comfottable!
-set -g prefix C-a
-
-# Free the original `Ctrl-b` prefix keybinding.
+# change the prefix from 'C-b' to 'C-a'
+# (remap capslock to CTRL for easy access)
 unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
 
-# Ensure that we can send `Ctrl-a` to other apps.
-bind C-a send-prefix
-
-# Reload the file with Prefix r.
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
-
-# Splitting panes.
-bind | split-window -h
-bind - split-window -v
-
-# Moving between panes.
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-# Moving between windows.
-# Provided you've mapped your `CAPS LOCK` key to the `CTRL` key,
-# you can now move between panes without moving your hands off the home row.
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
-
-# Moving windows
-bind-key Left swap-window -t -1
-bind-key Right swap-window -t +1
-
-# Pane resizing.
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
-
-# Maximize and restore a pane.
-unbind Up
-bind Up new-window -d -n tmp \; swap-pane -s tmp.1 \; select-window -t tmp
-unbind Down
-bind Down last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
-
-# Log output to a text file on demand.
-bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
-
-# Setting the delay between prefix and command.
-set -sg escape-time 1
-
-# Set the base index for windows to 1 instead of 0.
+# start with window 1 (instead of 0)
 set -g base-index 1
 
-# Set the base index for panes to 1 instead of 0.
-setw -g pane-base-index 1
+# start with pane 1
+set -g pane-base-index 1
 
-# Mouse support - set to on if you want to use the mouse.
-# setw -g mode-mouse off
-# set -g mouse-select-pane off
-# set -g mouse-resize-pane off
-# set -g mouse-select-window off
+# split panes using | and -, make sure they open in the same path
+bind % split-window -h -c "#{pane_current_path}"
+bind " split-window -v -c "#{pane_current_path}"
 
-# Set the default terminal mode to 256color mode.
+# open new windows in the current path
+bind c new-window -c "#{pane_current_path}"
+
+# reload config file
+bind r source-file ~/.tmux.conf
+
+# unbind p
+# bind p previous-window
+
+# shorten command delay
+set -sg escape-time 1
+
+# don't rename windows automatically
+set-option -g allow-rename off
+
+# mouse control (clickable windows, panes, resizable panes)
+set -g mouse on
+
+# Use Alt-arrow keys without prefix key to switch panes
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# set default terminal mode to 256 colors
 set -g default-terminal "screen-256color"
 
-# Enable activity alerts.
-setw -g monitor-activity on
-set -g visual-activity on
+######################
+### DESIGN CHANGES ###
+######################
 
-# Pane colors.
-set -g pane-border-fg green
-set -g pane-border-bg black
-set -g pane-active-border-fg white
-set -g pane-active-border-bg yellow
+# panes
+set -g pane-border-fg black
+set -g pane-active-border-fg brightred
 
-# Command / message line.
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
+## Status bar design
+# status line
+set -g status-justify left
+set -g status-bg default
+set -g status-fg colour12
+set -g status-interval 2
 
-# Enable emacs keys.
-setw -g mode-keys emacs
+# messaging
+set -g message-fg black
+set -g message-bg yellow
+set -g message-command-fg blue
+set -g message-command-bg black
 
-# Status bar
-set -g status-left-length 52
-set -g status-right-length 451
-set -g status-fg white
-set -g status-bg colour234
-set -g window-status-activity-attr bold
-set -g pane-border-fg colour245
-set -g pane-active-border-fg colour39
-set -g message-fg colour16
-set -g message-bg colour221
+#window mode
+setw -g mode-bg colour6
+setw -g mode-fg colour0
+
+# window status
+setw -g window-status-format " #F#I:#W#F "
+setw -g window-status-current-format " #F#I:#W#F "
+setw -g window-status-format "#[fg=magenta]#[bg=black] #I #[bg=cyan]#[fg=colour8] #W "
+setw -g window-status-current-format "#[bg=brightmagenta]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
+setw -g window-status-current-bg colour0
+setw -g window-status-current-fg colour11
+setw -g window-status-current-attr dim
+setw -g window-status-bg green
+setw -g window-status-fg black
+setw -g window-status-attr reverse
+
+# Info on left (I don't have a session display for now)
+set -g status-left ''
+
+# loud or quiet?
+set-option -g visual-activity off
+set-option -g visual-bell off
+set-option -g visual-silence off
+set-window-option -g monitor-activity off
+set-option -g bell-action none
+
+# The modes {
+setw -g clock-mode-colour colour135
+setw -g mode-attr bold
+setw -g mode-fg colour196
+setw -g mode-bg colour238
+
+# }
+# The panes {
+
+set -g pane-border-bg colour0
+set -g pane-border-fg colour19
+set -g pane-active-border-bg colour0
+set -g pane-active-border-fg colour9
+
+# }
+# The statusbar {
+
+set -g status-position bottom
+set -g status-bg colour18
+set -g status-fg colour137
+set -g status-attr dim
+set -g status-left ''
+set -g status-right '#[fg=colour233,bg=colour19,bold] %d/%m #[fg=colour233,bg=colour8,bold] %H:%M:%S '
+set -g status-right-length 50
+set -g status-left-length 20
+
+setw -g window-status-current-fg colour1
+setw -g window-status-current-bg colour19
+setw -g window-status-current-attr bold
+setw -g window-status-current-format ' #I#[fg=colour249]:#[fg=colour255]#W#[fg=colour249]#F '
+
+setw -g window-status-fg colour9
+setw -g window-status-bg colour18
+setw -g window-status-attr none
+setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+
+setw -g window-status-bell-attr bold
+setw -g window-status-bell-fg colour255
+setw -g window-status-bell-bg colour1
+
+# }
+# The messages {
+
 set -g message-attr bold
-set -g status-left '#[fg=colour235,bg=colour252,bold] ❐ #S#[fg=colour252,bg=colour238,nobold]⮀#[fg=colour245,bg=colour238,bold] #(whoami)#[fg=colour238,bg=colour234,nobold]⮀'
-set -g status-right '#[fg=colour39, bg=colour234]⮂#[fg=colour234,bg=colour39]#(uptime | grep -oP load.+) '
-set -g window-status-format "#[fg=white,bg=colour234] #I #W "
-set -g window-status-current-format "#[fg=colour234,bg=colour39]⮀#[fg=colour255,bg=colour39,noreverse,bold] #I ⮁ #W#[fg=colour39,bg=colour234,nobold]⮀"
+set -g message-fg colour232
+set -g message-bg colour16
 
-# Solarized color.
-# source-file ~/.tmux/vendor/tmux-colors-solarized/tmuxcolors-256.conf
-
+# }
