--- a/tmux.conf
+++ b/tmux.conf
@@ -1,36 +1,54 @@
-# change the prefix from 'C-b' to 'C-a'
-# (remap capslock to CTRL for easy access)
-unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
-
-# start with window 1 (instead of 0)
 set -g base-index 1
+setw -g pane-base-index 1
 
-# start with pane 1
-set -g pane-base-index 1
+# Automatically set window title
+set-window-option -g automatic-rename on
+set-option -g set-titles on
 
-# split panes using | and -, make sure they open in the same path
-bind % split-window -h -c "#{pane_current_path}"
-bind " split-window -v -c "#{pane_current_path}"
+set-window-option -g xterm-keys on
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
 
-# open new windows in the current path
+set -g history-limit 10000
+set -sg escape-time 0
+set -g focus-events on
+
+setw -g mode-keys vi
+setw -g mouse on
+setw -g monitor-activity on
+
+unbind C-b
+set -g prefix C-Space
+bind C-Space send-prefix
 bind c new-window -c "#{pane_current_path}"
 
-# reload config file
-bind r source-file ~/.tmux.conf
+bind-key C-L resize-pane -L 5
+bind-key C-R resize-pane -R 5
 
-# unbind p
-# bind p previous-window
+bind-key v split-window -h
+bind-key s split-window -v
 
-# shorten command delay
-set -sg escape-time 1
+bind-key J resize-pane -D 5
+bind-key K resize-pane -U 5
+bind-key H resize-pane -L 5
+bind-key L resize-pane -R 5
 
-# don't rename windows automatically
-set-option -g allow-rename off
+bind-key M-j resize-pane -D
+bind-key M-k resize-pane -U
+bind-key M-h resize-pane -L
+bind-key M-l resize-pane -R
 
-# mouse control (clickable windows, panes, resizable panes)
-set -g mouse on
+# Vim style pane selection
+bind h select-pane -L
+bind j select-pane -D 
+bind k select-pane -U
+bind l select-pane -R
+
+# Use Alt-vim keys without prefix key to switch panes
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D 
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
 
 # Use Alt-arrow keys without prefix key to switch panes
 bind -n M-Left select-pane -L
@@ -38,12 +56,11 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
-# set default terminal mode to 256 colors
-set -g default-terminal "screen-256color"
+# Shift arrow to switch windows
+bind -n S-Left  previous-window
+bind -n S-Right next-window
 
-######################
 ### DESIGN CHANGES ###
-######################
 
 # panes
 set -g pane-border-fg black
@@ -88,6 +105,8 @@ set-option -g visual-silence off
 set-window-option -g monitor-activity off
 set-option -g bell-action none
 
+set -g default-terminal "screen-256color"
+
 # The modes {
 setw -g clock-mode-colour colour135
 setw -g mode-attr bold
@@ -97,30 +116,30 @@ setw -g mode-bg colour238
 # }
 # The panes {
 
-set -g pane-border-bg colour0
-set -g pane-border-fg colour19
-set -g pane-active-border-bg colour0
-set -g pane-active-border-fg colour9
+set -g pane-border-bg colour235
+set -g pane-border-fg colour238
+set -g pane-active-border-bg colour236
+set -g pane-active-border-fg colour51
 
 # }
 # The statusbar {
 
 set -g status-position bottom
-set -g status-bg colour18
+set -g status-bg colour234
 set -g status-fg colour137
 set -g status-attr dim
 set -g status-left ''
-set -g status-right '#[fg=colour233,bg=colour19,bold] %d/%m #[fg=colour233,bg=colour8,bold] %H:%M:%S '
+set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
 set -g status-right-length 50
 set -g status-left-length 20
 
-setw -g window-status-current-fg colour1
-setw -g window-status-current-bg colour19
+setw -g window-status-current-fg colour81
+setw -g window-status-current-bg colour238
 setw -g window-status-current-attr bold
-setw -g window-status-current-format ' #I#[fg=colour249]:#[fg=colour255]#W#[fg=colour249]#F '
+setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
 
-setw -g window-status-fg colour9
-setw -g window-status-bg colour18
+setw -g window-status-fg colour138
+setw -g window-status-bg colour235
 setw -g window-status-attr none
 setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
 
@@ -133,6 +152,15 @@ setw -g window-status-bell-bg colour1
 
 set -g message-attr bold
 set -g message-fg colour232
-set -g message-bg colour16
+set -g message-bg colour166
 
 # }
+
+# Plugins
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+run '~/.tmux/plugins/tpm/tpm'
