--- a/vim/.editorconfig
+++ b/vim/.editorconfig
@@ -34,6 +34,7 @@ indent_size = 2
 insert_final_newline = true
 indent_style = space
 indent_size = 2
+local_vimrc = .local_vimrc
 
 [*.css]
 indent_style = space
