--- a/vim/packman.conf
+++ b/vim/packman.conf
@@ -1,5 +1,7 @@
 want_opt="
-#vim-scripts  / AnsiEsc.vim
+ctrlpvim/ctrlp.vim
+ivyl/vim-bling
+svermeulen/vim-quickfixdo
 #godlygeek    / tabular
 #chrisbra     / unicode.vim
 #airblade     / vim-gitgutter
@@ -10,6 +12,13 @@ want_opt="
 # These will be put in $install_dir/start.
 want_start="
 sgur/vim-editorconfig
+lambdalisue/smartcl.vim
+osyo-manga/vim-watchdogs
+thinca/vim-quickrun
+Shougo/vimproc.vim
+jceb/vim-hier
+dannyob/quickfixstatus
+#neomake/neomake
 #vim-scripts  / LargeFile
 #scrooloose   / syntastic
 #justinmk     / vim-dirvish
