--- a/dotfiles/alacritty.yml
+++ b/dotfiles/alacritty.yml
@@ -3,14 +3,14 @@
 # Any items in the `env` entry below will be added as
 # environment variables. Some entries may override variables
 # set by alacritty itself.
-#env:
+# env:
   # TERM variable
   #
   # This value is used to set the `$TERM` environment variable for
   # each instance of Alacritty. If it is not present, alacritty will
   # check the local terminfo database and use `alacritty` if it is
   # available, otherwise `xterm-256color` is used.
-  #TERM: xterm-256color
+  # TERM: xterm-256color
 
 window:
   # Window dimensions (changes require restart)
@@ -79,8 +79,8 @@ tabspaces: 8
 # Font configuration (changes require restart)
 font:
   normal:
-    family: SauceCodePro Nerd Font
-  size: 9
+    family: "RobotoMono Nerd Font"
+  size: 10
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
@@ -131,7 +131,7 @@ colors:
   # Colors the cursor will use if `custom_cursor_colors` is true
   cursor:
     text: '0x282c34'
-    cursor: '0xabb2bf'
+    cursor: '0xffffff'
 
   # Normal colors
   normal:
