--- a/dotfiles/i3/blocks.conf
+++ b/dotfiles/i3/blocks.conf
@@ -4,14 +4,25 @@ markup=none
 
 color=#586e75
 
+[bandwidth]
+label=
+interval=1
+
 [memory]
 label=mem
-separator=false
+interval=5
+
+[cpu_usage]
+label=cpu
 interval=5
 
 [temperature]
-command=/nix/store/*i3blocks*/libexec/i3blocks/temperature -w 80 -c 90
-label=
+label=tcpu
+interval=1
+
+[gpu]
+command=sensors | grep -A 0 'temp1'|cut -c16-22
+label=tgpu
 interval=1
 
 [volume]
@@ -23,6 +34,5 @@ interval=1
 # interval=5
 
 [date]
-command=date '+%b %d %H:%M'
-interval=60
-label=
+command=date '+%b %d %H:%M:%S '
+interval=1
