--- a/dotfiles/i3/config
+++ b/dotfiles/i3/config
@@ -1,9 +1,9 @@
 # i3 config file
 set $mod Mod4
-set $term kitty
-set $menu dmenu_run
+set $term lxterminal
 
-# font pango: InconsolataGo Nerd Font 9
+set $menu rofi -show run
+
 font pango: Mononoki Nerd Font 9
 
 # Output configuration
@@ -12,12 +12,12 @@ exec_always --no-startup-id xrandr DVI-0 resolution 1920x1080
 # Basics
   set $ws1 "1 "
   set $ws2 "2 "
-  set $ws3 "3 "
-  set $ws4 "4 "
-  set $ws5 "5 "
-  set $ws6 "6 "
-  set $ws7 "7 "
-  set $ws8 "8 "
+  set $ws3 "3 "
+  set $ws4 "4 "
+  set $ws5 "5 "
+  set $ws6 "6 "
+  set $ws7 "7 "
+  set $ws8 "8 "
   set $ws9 "9 "
   set $ws10 "10 "
 # Meta key bindings
@@ -96,6 +96,8 @@ bindsym $mod+e layout toggle split
 bindsym $mod+Shift+space floating toggle
 # Swap focus between tiling windows and floating windows
 bindsym $mod+space focus mode_toggle
+# toggle sticky
+bindsym $mod+Shift+s sticky toggle
 # Move focus to parent container with mod+a
 bindsym $mod+a focus parent
 # Move windows in and out of the scratchpad with mod+(shift)+t
@@ -112,9 +114,10 @@ bindsym $mod+Shift+r restart
 bindsym $mod+Return exec $term
 # dmenu with mod+d for programs
 bindsym $mod+d exec $menu
-# bindsym $mod+c exec $file
-for_window [class="^fzf-menu$"] floating enable
-# for_window [class="^fm$"] floating enable
+# lock screen
+bindsym $mod+shift+l exec i3lock-fancy -- scrot -z
+# screenshot
+bindsym --release Print exec scrot -s
 #default_floating_border none
 #hide_edge_borders both
 # for_window [class="^.*"] border pixel 0
@@ -124,7 +127,6 @@ default_border pixel 1
 gaps inner 7
 gaps outer 0
 smart_borders on
-# new_window none
 
 # Base16 colors
 set $base00 #282c34
@@ -166,13 +168,19 @@ client.focused          $base05 $base0D $base00 $base0D $base0D
 client.focused_inactive $base01 $base01 $base05 $base03 $base01
 client.unfocused        $base01 $base00 $base05 $base01 $base01
 client.urgent           $base08 $base08 $base00 $base08 $base08
-#client.placeholder      $base00 $base00 $base05 $base00 $base00
-#client.background       $base07
-# exec_always --no-startup-id "killall -q compton; allow_rgb10_configs=false compton --config ~/.config/i3/compton.conf"
+
 exec_always --no-startup-id "killall -q compton; compton --config ~/.config/i3/compton.conf"
 exec_always --no-startup-id feh --bg-scale ~/Projects/nixos/dotfiles/i3/Mojave.jpg
-#Window clases
-bindsym $mod+y exec "find ~/Projects/ -maxdepth 1 -type d | dmenu -p 'Repos: ' -l 60 | sh -c 'read repo; cd $repo; st -e tig'"
+
+# floating
+for_window [class="nmtui"] floating enable
+for_window [class="Pavucontrol"] floating enable
+for_window [class="Skype"] floating enable
+
+# default workspaces
+assign [class="Chromium"] $ws1
+assign [class="Skype"] $workspace9
+
+# startup
 exec --no-startup-id feh --bg-fill ~/.config/i3/Mojave.jpg
-bindsym $mod+shift+l exec i3lock-fancy -- scrot -z
-bindsym --release Print exec scrot -s
+exec --no-startup-id chromium
