--- a/overlays/alacritty/config
+++ b/overlays/alacritty/config
@@ -25,15 +25,15 @@ tabspaces: 8
 
 font:
   normal:
-    family: Mononoki Nerd Font
+    family: NotoSansMono Nerd Font
     style: Regular
   bold:
-    family: Mononoki Nerd Font
+    family: NotoSansMono Nerd Font
     style: Bold
   italic:
-    family: Mononoki Nerd Font
+    family: NotoSansMono Nerd Font
     style: Italic
-  size: 11.0
+  size: 12.0
   offset:
     x: 0
     y: 0
