--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,11 @@
 root = true
 
+[*]
+insert_final_newline = true
+indent_style = space
+indent_size = 2
+trim_trailing_whitespace = true
+
 [*.nix]
 insert_final_newline = true
 indent_style = space
