--- a/overlays/kitty/kitty.conf
+++ b/overlays/kitty/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-# font_family      monospace
-# bold_font        auto
-# italic_font      auto
-# bold_italic_font auto
+font_family      DejaVuSansMono Nerd Font
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. By default they are derived automatically, by the OSes
@@ -22,10 +22,10 @@
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_family Iosevka
-bold_font Iosevka Medium
-italic_font Iosevka Italic
-bold_italic_font Iosevka Medium Italic
+# font_family Iosevka
+# bold_font Iosevka Medium
+# italic_font Iosevka Italic
+# bold_italic_font Iosevka Medium Italic
 
 font_size 10.0
 
