--- a/overlays/lsp/js/package.json
+++ b/overlays/lsp/js/package.json
@@ -1,7 +1,5 @@
 [
   "vim-language-server",
-  "@slonoed/jsref",
-  "stylelint",
-  "import-js",
-  "flow-bin"
+  "diagnostic-languageserver",
+  "import-js"
 ]
