--- a/desktop/config
+++ b/desktop/config
@@ -3,9 +3,6 @@ set $mod Mod4
 
 font pango: monospace 9
 
-# Output configuration
-# exec_always --no-startup-id xrandr DVI-0 resolution 1920x1080
-
 # define workspaces
   set $ws1 "1 "
   set $ws2 "2 "
@@ -75,11 +72,11 @@ set $sysmenu "system: [l]ogout  [p]oweroff  [r]eboot"
 bindsym $mod+Shift+e mode $sysmenu
 
 mode $sysmenu {
-    bindsym l         exit
-    bindsym p         exec shutdown -P now
-    bindsym r         exec shutdown -r now
-    bindsym Return    mode "default"
-    bindsym Escape    mode "default"
+  bindsym l         exit
+  bindsym p         exec shutdown -P now
+  bindsym r         exec shutdown -r now
+  bindsym Return    mode "default"
+  bindsym Escape    mode "default"
 }
 # split in horizontal orientation
 bindsym $mod+h split h
@@ -152,19 +149,7 @@ set $base0F #be5046
 # Status Bar:
 bar {
   position bottom
-    swaybar_command $status
-    colors {
-      background $base00
-        separator  $base01
-        statusline $base04
-
-# State                     Border  BG      Text
-        focused_workspace   $base05 $base0D $base00
-        active_workspace    $base05 $base03 $base00
-        inactive_workspace  $base03 $base01 $base05
-        urgent_workspace    $base08 $base08 $base00
-        binding_mode        $base0A $base0A $base00
-    }
+  swaybar_command $status
 }
 
 client.focused          $base05 $base0D $base00 $base0D $base0D
@@ -173,12 +158,6 @@ client.unfocused        $base01 $base00 $base05 $base01 $base01
 client.urgent           $base08 $base08 $base00 $base08 $base08
 
 bindsym --release $mod+Control+l exec loginctl lock-session
-exec $idle -w \
-  timeout 300 '$lock' \
-  timeout 600 'swaymsg "output * dpms off"' \
-    resume 'swaymsg "output * dpms on"' \
-  before-sleep '$lock' \
-  lock '$lock'
 bindsym Print exec $slurp | $grim -g - - | wl-copy
 
 # windows
@@ -192,7 +171,7 @@ for_window [title="Skype"] floating enable
 # default workspaces
 assign [class="Chromium"] $ws1
 assign [class="Skype"] $workspace9
+assign [class="^Spotify$"] $ws10
 
 # startup
-exec --no-startup-id $mako --default-timeout=10000 --font='DejaVuSans Regular 8' --background-color=#282c34 --border-color=#0059a3 --max-icon-size=20
-exec --no-startup-id chromium
+exec --no-startup-id $mako --default-timeout=10000 --font='sansSerif 9' --background-color=#282c34 --border-size=0 border-radius=15 margin=20 padding=15 --border-color=#0059a3 --max-icon-size=20
